test/e2e/testdata/httproute-routingtype.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: custom-proxy-config
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  routingType: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-to-service
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /to-cluster-ip
      backendRefs:
        - name: infra-backend-v1
          port: 8080
